--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,14 @@
 <!DOCTYPE html>
+
+
+
+
+
+
+
+
+
+
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -19,9 +29,80 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Domestic Violence</title>
   </head>
   <body>
+
+      <div class="welcome">
+          <h1>Welcome</h1>
+          <p>Log in as guest to remain anonymous or create account to access advanced features.</p>
+      </div>
+  <!-- Button to open the modal login form -->
+  <button onclick="document.getElementById('id01').style.display='block'">Login</button>
+  
+  <!-- The Modal for login -->
+  <div id="id01" class="modal">
+    <span onclick="document.getElementById('id01').style.display='none'" 
+  class="close" title="Close Modal">&times;</span>
+  
+    <!-- Modal Content -->
+    <form class="modal-content animate" action="/action_page.php">
+      <div class="imgcontainer">
+        <img src="Will insert later" alt="Avatar" class="avatar">
+      </div>
+  
+      <div class="container">
+        <label><b>Username</b></label>
+        <input type="text" placeholder="Enter Username" name="uname" required>
+  
+        <label><b>Password</b></label>
+        <input type="password" placeholder="Enter Password" name="psw" required>
+  
+        <button type="submit">Login</button>
+        <input type="checkbox" checked="checked"> Remember me
+      </div>
+  
+      <div class="container" style="background-color:#f1f1f1">
+        <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+        <span class="psw">Forgot <a href="#">password?</a></span>
+      </div>
+    </form>
+  </div>
+  
+  <!-- Button to open the sign up modal -->
+  <button onclick="document.getElementById('id02').style.display='block'">Sign Up</button>
+  
+  <!-- The Modal (contains the Sign Up form) -->
+  <div id="id02" class="modal">
+    <span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Modal">&times;</span>
+    <form class="modal-content animate" action="/action_page.php">
+      <div class="container">
+        <label><b>First Name</b></label>
+        <input type="text" placeholder="Enter First Name" name="firstname" required>
+  
+        <label><b>Last Name</b></label>
+        <input type="text" placeholder="Enter Last Name" name="lastname" required>
+  
+        <label><b>Email Address</b></label>
+        <input type="text" placeholder="Enter Email Address" name="email" required>
+  
+        <label><b>Password</b></label>
+        <input type="password" placeholder="Enter Password" name="psw" required>
+  
+        <label><b>Verify Password</b></label>
+        <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+        <input type="checkbox" checked="checked"> Remember me
+        <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
+  
+        <div class="clearfix">
+          <button type="button" onclick="document.getElementById('id02').style.display='none'" class="cancelbtn">Cancel</button>
+          <button type="submit" class="signupbtn">Sign Up</button>
+      </form>  
+  </div>
+  </div>
+    </div>
+      <!-- /form -->
+      
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
@@ -38,3 +119,4 @@
     -->
   </body>
 </html>
+
