--- a/public/index.html
+++ b/public/index.html
@@ -10,17 +10,18 @@
 
 
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
-    <!--
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="theme-color" content="#000000">
+  <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -29,85 +30,102 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Domestic Violence</title>
-  </head>
-  <body>
+  <title>Domestic Violence</title>
+</head>
 
-      <div class="welcome">
-          <h1>Welcome</h1>
-          <p>Log in as guest to remain anonymous or create account to access advanced features.</p>
-      </div>
+<body>
+
+  <div class="welcome">
+    <h1>Welcome</h1>
+    <p>Log in to access advanced features or continue anonymously.</p>
+  </div>
   <!-- Button to open the modal login form -->
   <button onclick="document.getElementById('id01').style.display='block'">Login</button>
-  
+
   <!-- The Modal for login -->
   <div id="id01" class="modal">
-    <span onclick="document.getElementById('id01').style.display='none'" 
-  class="close" title="Close Modal">&times;</span>
-  
+    <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
+
     <!-- Modal Content -->
     <form class="modal-content animate" action="/action_page.php">
       <div class="imgcontainer">
         <img src="Will insert later" alt="Avatar" class="avatar">
       </div>
-  
+
       <div class="container">
-        <label><b>Username</b></label>
+        <label>
+          <b>Username</b>
+        </label>
         <input type="text" placeholder="Enter Username" name="uname" required>
-  
-        <label><b>Password</b></label>
+
+        <label>
+          <b>Password</b>
+        </label>
         <input type="password" placeholder="Enter Password" name="psw" required>
-  
+
         <button type="submit">Login</button>
         <input type="checkbox" checked="checked"> Remember me
       </div>
-  
+
       <div class="container" style="background-color:#f1f1f1">
         <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
-        <span class="psw">Forgot <a href="#">password?</a></span>
+        <span class="psw">Forgot
+          <a href="#">password?</a>
+        </span>
       </div>
     </form>
   </div>
-  
+
   <!-- Button to open the sign up modal -->
   <button onclick="document.getElementById('id02').style.display='block'">Sign Up</button>
-  
+
   <!-- The Modal (contains the Sign Up form) -->
   <div id="id02" class="modal">
     <span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Modal">&times;</span>
     <form class="modal-content animate" action="/action_page.php">
       <div class="container">
-        <label><b>First Name</b></label>
+        <label>
+          <b>First Name</b>
+        </label>
         <input type="text" placeholder="Enter First Name" name="firstname" required>
-  
-        <label><b>Last Name</b></label>
+
+        <label>
+          <b>Last Name</b>
+        </label>
         <input type="text" placeholder="Enter Last Name" name="lastname" required>
-  
-        <label><b>Email Address</b></label>
+
+        <label>
+          <b>Email Address</b>
+        </label>
         <input type="text" placeholder="Enter Email Address" name="email" required>
-  
-        <label><b>Password</b></label>
+
+        <label>
+          <b>Password</b>
+        </label>
         <input type="password" placeholder="Enter Password" name="psw" required>
-  
-        <label><b>Verify Password</b></label>
+
+        <label>
+          <b>Verify Password</b>
+        </label>
         <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
         <input type="checkbox" checked="checked"> Remember me
-        <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
-  
+        <p>By creating an account you agree to our
+          <a href="#">Terms & Privacy</a>.</p>
+
         <div class="clearfix">
           <button type="button" onclick="document.getElementById('id02').style.display='none'" class="cancelbtn">Cancel</button>
           <button type="submit" class="signupbtn">Sign Up</button>
-      </form>  
-  </div>
-  </div>
+    </form>
     </div>
-      <!-- /form -->
-      
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
-    <div id="root"></div>
-    <!--
+    </div>
+  </div>
+  <!-- /form -->
+
+  <noscript>
+    You need to enable JavaScript to run this app.
+  </noscript>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -117,6 +135,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
-</html>
+</body>
 
+</html>
