--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,7 @@
 <!DOCTYPE html>
 
-
-
-
-
-
-
-
-
-
 <html lang="en">
+
 
 <head>
   <meta charset="utf-8">
@@ -19,6 +11,7 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
+  <link rel="stylesheet" href="styles.css">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <!--
@@ -38,10 +31,10 @@
   <div class="welcome">
     <h1>Welcome</h1>
     <p>Log in to access advanced features or continue anonymously.</p>
-  </div>
-  <!-- Button to open the modal login form -->
-  <button onclick="document.getElementById('id01').style.display='block'">Login</button>
 
+    <!-- Button to open the modal login form -->
+    <button onclick="document.getElementById('id01').style.display='block'">Login</button>
+  </div>
   <!-- The Modal for login -->
   <div id="id01" class="modal">
     <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
@@ -77,7 +70,9 @@
   </div>
 
   <!-- Button to open the sign up modal -->
-  <button onclick="document.getElementById('id02').style.display='block'">Sign Up</button>
+  <div class="welcome1">
+    <button onclick="document.getElementById('id02').style.display='block'">Sign Up</button>
+  </div>
 
   <!-- The Modal (contains the Sign Up form) -->
   <div id="id02" class="modal">
